# C-alculator

./: .gitignore  CMakeLists.txt  README.md  linked_list.c  linked_list.h  main.c  stack.h  tests.c  tests.h  types.c  types.h
Lexer/: lexer.c  lexer.h
Parser/: parser.c  parser.h
data_structures/: ast.c  ast.h  linked_list.c  linked_list.h  queue.c  queue.h  stack.c  stack.h
